<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:android1="http://schemas.android.com/apk/res/android">

    <string name="app_name">Ribbit</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string android:id="@+id/string1" name="password_hint" android:layout_width="wrap_content" android:layout_height="wrap_content">Password</string>
    <string android:id="@+id/string1" name="username_hint" android:layout_width="wrap_content" android:layout_height="wrap_content">Username (Case Sensitive)</string>
    <string android:id="@+id/string1" name="login_button_text" android:layout_width="wrap_content" android:layout_height="wrap_content">SIGN IN</string>
    <string android:id="@+id/string1" name="signup_text" android:layout_width="wrap_content" android:layout_height="wrap_content">Don\'t have an account yet? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string android1:id="@+id/string1" name="email_hint" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Email</string>
    <string android1:id="@+id/string1" name="signup_error_message" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Please make sure all fields are filled</string>
    <string android1:id="@+id/string1" name="signup_error_title" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Oops!</string>
    <string android1:id="@+id/string1" name="login_error_message" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Please make sure you enter a valid username and password</string>
    <string android1:id="@+id/string1" name="login_error_title" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Oops!</string>
    <string android1:id="@+id/string1" name="menu_logout_label" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Logout</string>
    <string android1:id="@+id/string1" name="forgot_password_text" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Forgot your password?</string>
    <string android1:id="@+id/string1" name="email_sent_title" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Success!</string>
    <string android1:id="@+id/string1" name="email_sent_message" android1:layout_width="wrap_content" android1:layout_height="wrap_content">An email was sent to your email with instructions to reset your password</string>
    <string android1:id="@+id/string1" name="enter_email_title" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Enter email address</string>
    <string android1:id="@+id/string1" name="enter_email_message" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Please enter your email address</string>
    <string android1:id="@+id/string1" name="empty_inbox_label" android1:layout_width="wrap_content" android1:layout_height="wrap_content">No new messages</string>
    <string android1:id="@+id/string1" name="menu_edit_friends_label" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string android1:id="@+id/string1" name="error_title" android1:layout_width="wrap_content" android1:layout_height="wrap_content">We\'re sorry</string>
    <string android1:id="@+id/string1" name="empty_friends_label" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Empty</string>
    <string android1:id="@+id/string1" name="camera_label" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Camera</string>

    <string-array android1:id="@+id/stringarray1" name="Camera_Choices" android1:layout_width="wrap_content" android1:layout_height="wrap_content">
        <item android1:id="@+id/take_picture" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Take Picture</item>
        <item android1:id="@+id/take_video" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Take Video</item>
        <item android1:id="@+id/choose_picture" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Choose Picture</item>
        <item android1:id="@+id/choose_video" android1:layout_width="wrap_content" android1:layout_height="wrap_content">Choose Video</item>
    </string-array>

    <string android1:id="@+id/string1" name="error_external_storage" android1:layout_width="wrap_content" android1:layout_height="wrap_content">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">sorry, there was an error</string>
    <string name="video_file_size_warning">warning</string>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_label">Choose some friends first</string>
    <string name="error_opening_file">Error opening file</string>
    <string name="error_file_size_too_large">The file size is too large!</string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">Error selecting file</string>
    <string name="error_selecting_file_title">Error</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">Something went wrong... Please try again</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="age_hint">Age</string>
    <string name="hometown_hint">Hometown</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="chat_label">chat</string>
    <string name="title_activity_send_text">SendTextActivity</string>
    <string name="send_text_error_message">Cannot send empty message!</string>
    <string name="title_activity_view_text">ViewTextActivity</string>
    <string name="menu_refresh_label">Refresh</string>
    <string name="title_activity_refresh">RefreshActivity</string>
    <string name="refresh">Refreshing...</string>
    <string name="content_desc_background">Ribbit Frog Background Image</string>
    <string name="signup_button_text">SIGN UP</string>
    <string name="cancel_button_text">CANCEL</string>

</resources>
