<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cecilerm.ribbit.SignUpActivity" >

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:ems="10"
        android:hint="@string/username_hint" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameField"
        android:layout_below="@+id/usernameField"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstNameField"
        android:layout_below="@+id/emailField"
        android:layout_alignLeft="@+id/emailField"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/first_name_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastNameField"
        android:layout_below="@+id/firstNameField"
        android:layout_alignLeft="@+id/firstNameField"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/last_name_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ageField"
        android:layout_below="@+id/lastNameField"
        android:layout_alignLeft="@+id/lastNameField"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/age_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hometownField"
        android:layout_below="@+id/ageField"
        android:layout_alignLeft="@+id/ageField"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/hometown_hint" />

    <Button
        android:id="@+id/SignUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/ageField"
        android:layout_marginBottom="40dp" />

</RelativeLayout>