<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_fill"
    tools:context="com.cecilerm.ribbit.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/content_desc_background"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textColor="@color/white_text"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="Android Project"
        android:textColor="@color/white_text"
        android:textSize="13sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/Box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_below="@+id/subtitle"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/hint_grey"
        android:textSize="18sp">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameField"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColorHint="@color/hint_grey"
        android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Box"
        android:layout_centerHorizontal="true"
        android:text="@string/login_button_text" />

    <TextView
        android:id="@+id/ForgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/white_text"
        android:text="@string/forgot_password_text" />
    
    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/LoginButton"
        android:layout_marginTop="12dp"
        android:text="@string/signup_text"
        android:textColor="@color/white_text"/>




</RelativeLayout>
